unpackaged/main/default/objects/Perfil_Tercero_Moral__c/Perfil_Tercero_Moral__c.object-meta.xml
<CustomObject>
    <label>Perfil Tercero Persona Moral</label>
    <nameField>
        <label>Denominación o Razón Social Tercero Moral</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perfil Tercero Persona Moral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>