unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Accionista_1_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Accionista_1_Tercero_Moral__c</fullName>
    <label>Accionista 1 Tercero Moral Tercero</label>
    <length>100</length>
    <type>Text</type>
</CustomField>