unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Accionistas_3_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Accionistas_3_Tercero_Moral__c</fullName>
    <label>Accionista 3 Tercero Moral Tercero</label>
    <length>100</length>
    <type>Text</type>
</CustomField>