unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Apellido_Materno_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno_Rep_Legal_Tercero__c</fullName>
    <label>Apellido Materno Rep Legal Tercero</label>
    <length>80</length>
    <type>Text</type>
</CustomField>