unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Apellido_Paterno_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno_Rep_Legal_Tercero__c</fullName>
    <label>Apellido Paterno Rep Legal Tercero</label>
    <length>80</length>
    <type>Text</type>
</CustomField>