unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Autoridad_Identificacion_Rep_Legal_Terce__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Identificacion_Rep_Legal_Terce__c</fullName>
    <label>Autoridad Identificación Rep Legal Terce</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Identificacion_Rep_Legal_Tercero__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Autoridad_Identificacion</valueSetName>
    </valueSet>
</CustomField>