unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <label>Calle Tercero</label>
    <length>150</length>
    <type>Text</type>
</CustomField>