unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Check_Direccion_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Check_Direccion_Laboral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Dirección Laboral Tercero</label>
    <type>Checkbox</type>
</CustomField>