unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Check_List_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Tercero__c</fullName>
    <label>Check List Tercero</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprobante de Domicilio del Representante Legal</fullName>
            </value>
            <value>
                <fullName>Comprobante de Domicilio de la persona moral</fullName>
            </value>
            <value>
                <fullName>Identificación del Representante o Apoderado Legal</fullName>
            </value>
            <value>
                <fullName>Cédula de Identificación Fiscal expedida por el SAT</fullName>
            </value>
            <value>
                <fullName>Documento mediante el cual se crea o constituye la personal moral</fullName>
            </value>
            <value>
                <fullName>Poder del Representante o Apoderado Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>