unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Clave_Pais_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Clave_Pais_Rep_Legal_Tercero__c</fullName>
    <formula>TEXT(Pais_de_Nacimiento_Rep_Legal_Tercero__r.CodigoPais__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave País Rep Legal Tercero</label>
    <type>Text</type>
</CustomField>