unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia Tercero</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Moral</relationshipLabel>
    <relationshipName>Perfiles_Terceros_Morales</relationshipName>
    <type>Lookup</type>
</CustomField>