unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Correo_Electronico_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Rep_Legal_Tercero__c</fullName>
    <label>Correo Electrónico Rep Legal Tercero</label>
    <type>Email</type>
</CustomField>