unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Correo_electronico_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_Tercero_Moral__c</fullName>
    <label>Correo electrónico Tercero Moral</label>
    <type>Email</type>
</CustomField>