unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/CURP_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>CURP_Rep_Legal_Tercero__c</fullName>
    <label>CURP Rep Legal Tercero</label>
    <length>40</length>
    <type>Text</type>
</CustomField>