unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Director_General_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Director_General_Tercero_Moral__c</fullName>
    <label>Director General Tercero Moral</label>
    <length>100</length>
    <type>Text</type>
</CustomField>