unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Es_usted_el_titular_de_recursos__c.field-meta.xml
<CustomField>
    <fullName>Es_usted_el_titular_de_recursos__c</fullName>
    <formula>TEXT( Dictaminacion_Lookup__r.Es_usted_el_Titular_de_Recursos__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es usted el titular de recursos?</label>
    <type>Text</type>
</CustomField>