unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Estatus_Proceso_de_Venta_Dictaminacion2__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta_Dictaminacion2__c</fullName>
    <label>Estatus Proceso de Venta/Dictaminación2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>