unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Estatus_Proceso_de_Venta_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta_Oportunidad__c</fullName>
    <formula>text(Dictaminacion_Lookup__r.Oportunidad__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Proceso de Venta/Dictaminación</label>
    <type>Text</type>
</CustomField>