unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Existe_un_Tercero_que_aporta_Recursos__c.field-meta.xml
<CustomField>
    <fullName>Existe_un_Tercero_que_aporta_Recursos__c</fullName>
    <formula>TEXT(  Dictaminacion_Lookup__r.Existe_un_Tercero_que_aporta_Recursos__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Existe un Tercero que aporta Recursos?</label>
    <type>Text</type>
</CustomField>