unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extensión Tercero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>