unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Fecha_de_Constitucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Constitucion__c</fullName>
    <label>Fecha de Constitución Tercero</label>
    <type>Date</type>
</CustomField>