unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Fecha_de_Nacimiento_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento_Rep_Legal_Tercero__c</fullName>
    <label>Fecha de Nacimiento Rep Legal Tercero</label>
    <type>Date</type>
</CustomField>