unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Fecha_Escritura_Poder_Emp_Rep_Legal_Terc__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Escritura_Poder_Emp_Rep_Legal_Terc__c</fullName>
    <label>Fecha Escritura/Poder Emp Rep Legal Terc</label>
    <type>Date</type>
</CustomField>