unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Folio_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Folio_Tercero_Moral__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Folio Tercero Moral Tercero</label>
    <type>AutoNumber</type>
</CustomField>