unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Informacion_Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Informacion_Representante_Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información Representante Legal Tercero</label>
    <referenceTo>Informacion_representante_legal__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Moral</relationshipLabel>
    <relationshipName>Perfil_Tercero_Persona_Moral</relationshipName>
    <type>Lookup</type>
</CustomField>