unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Miembros_del_Consejo_3__c.field-meta.xml
<CustomField>
    <fullName>Miembros_del_Consejo_3__c</fullName>
    <label>Miembros del Consejo 3 Tercero Moral</label>
    <length>250</length>
    <type>Text</type>
</CustomField>