unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Monto_Total_a_Aportar__c.field-meta.xml
<CustomField>
    <fullName>Monto_Total_a_Aportar__c</fullName>
    <label>Monto Total a Aportar Tercero</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>