unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/No_Escritura_Empresa_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>No_Escritura_Empresa_Rep_Legal_Tercero__c</fullName>
    <label>No. Escritura  Empresa Rep Legal Tercero</label>
    <length>40</length>
    <type>Text</type>
</CustomField>