unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/No_Escritura_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>No_Escritura_Tercero_Moral__c</fullName>
    <label>No. Escritura Tercero Moral</label>
    <length>15</length>
    <type>Text</type>
</CustomField>