unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/No_Identificacion_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>No_Identificacion_Rep_Legal_Tercero__c</fullName>
    <label>No. Identificación  Rep Legal Tercero</label>
    <length>40</length>
    <type>Text</type>
</CustomField>