unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Nombre_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Cliente__c</fullName>
    <formula>Dictaminacion_Lookup__r.Nombre_Completo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Cliente Tercero</label>
    <type>Text</type>
</CustomField>