unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Nombre_Empresa_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Empresa_Rep_Legal_Tercero__c</fullName>
    <label>Nombre Empresa Rep Legal Tercero</label>
    <length>100</length>
    <type>Text</type>
</CustomField>