unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/NotarIa_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>NotarIa_Tercero_Moral__c</fullName>
    <label>Notaría Tercero Moral Tercero</label>
    <length>100</length>
    <type>Text</type>
</CustomField>