unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Num_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Num_Exterior__c</fullName>
    <label>Num. Exterior Tercero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>