unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Num_Interior__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior__c</fullName>
    <label>Num. Interior Tercero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>