unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Pais_de_Nacimiento_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacimiento_Rep_Legal_Tercero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacimiento Rep Legal Tercero</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Moral (País)</relationshipLabel>
    <relationshipName>Perfiles_Terceros_Morales1</relationshipName>
    <type>Lookup</type>
</CustomField>