unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Pais_de_Nacionalidad_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacionalidad_Tercero_Moral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacionalidad Tercero Moral</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Perfil Tercero Persona Moral (País de Nacionalidad)</relationshipLabel>
    <relationshipName>Perfil_Tercero_Persona_Moral</relationshipName>
    <type>Lookup</type>
</CustomField>