unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Perfil_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero_Moral__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Perfil_Tercero_Moral__c/&quot; &amp; Id &amp; &quot;/view&quot;, Folio_Tercero_Moral__c  &amp; &quot; - &quot; &amp; Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil Tercero Moral</label>
    <type>Text</type>
</CustomField>