unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Porcentaje_Accionistas_3__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Accionistas_3__c</fullName>
    <label>Porcentaje Accionista 3 Tercero Moral</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>