unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <formula>Dictaminacion_Lookup__r.Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso de Venta Tercero</label>
    <type>Text</type>
</CustomField>