unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Regiman_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Regiman_Fiscal__c</fullName>
    <label>Régiman Fiscal Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regimen_Fiscal</valueSetName>
    </valueSet>
</CustomField>