unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Regimen_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Regimen_Fiscal__c</fullName>
    <label>Régimen Fiscal Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>601	General de Ley Personas Morales</fullName>
            </value>
            <value>
                <fullName>603	Personas Morales con Fines no Lucrativos</fullName>
            </value>
            <value>
                <fullName>610	Residentes en el Extranjero sin Establecimiento Permanente en México</fullName>
            </value>
            <value>
                <fullName>620	Sociedades Cooperativas de Producción que optan por diferir sus ingresos</fullName>
            </value>
            <value>
                <fullName>622	Actividades Agrícolas, Ganaderas, Silvícolas y Pesqueras</fullName>
            </value>
            <value>
                <fullName>623	Opcional para Grupos de Sociedades</fullName>
            </value>
            <value>
                <fullName>624	Coordinados</fullName>
            </value>
            <value>
                <fullName>626	Régimen Simplificado de Confianza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>