unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Regimen_Fiscal_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Regimen_Fiscal_Rep_Legal_Tercero__c</fullName>
    <label>Régimen Fiscal Rep Legal Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regimen_Fiscal</valueSetName>
    </valueSet>
</CustomField>