unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/RFC_Empresa_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>RFC_Empresa_Rep_Legal_Tercero__c</fullName>
    <label>RFC Empresa Rep Legal Tercero</label>
    <length>13</length>
    <type>Text</type>
</CustomField>