unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/RFC_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>RFC_Rep_Legal_Tercero__c</fullName>
    <label>RFC Rep Legal Tercero</label>
    <length>13</length>
    <type>Text</type>
</CustomField>