unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/RFC_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>RFC_Tercero_Moral__c</fullName>
    <label>RFC Tercero Moral</label>
    <length>13</length>
    <type>Text</type>
</CustomField>