unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Sub_Tipo_Fiscal_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tipo_Fiscal_Rep__c</fullName>
    <label>Sub Tipo Fiscal Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Persona Moral</fullName>
                <default>true</default>
                <label>Persona Moral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>