unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Tel_fono_Celular_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_Celular_Tercero_Moral__c</fullName>
    <label>Teléfono Celular Tercero Moral</label>
    <type>Phone</type>
</CustomField>