unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Telefono_Celular_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular_Rep_Legal_Tercero__c</fullName>
    <label>Teléfono Celular Rep Legal Tercero</label>
    <type>Phone</type>
</CustomField>