unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Telefono_Domicilio_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Domicilio_Rep_Legal_Tercero__c</fullName>
    <label>Teléfono Domicilio Rep Legal Tercero</label>
    <type>Phone</type>
</CustomField>