unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Telefono_Oficina_Tercero_Moral__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Oficina_Tercero_Moral__c</fullName>
    <label>Teléfono Oficina Tercero Moral</label>
    <type>Phone</type>
</CustomField>