unpackaged/main/default/objects/Perfil_Tercero_Moral__c/fields/Tipo_Identificacion_Rep_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Identificacion_Rep_Legal_Tercero__c</fullName>
    <label>Tipo Identificación Rep Legal Tercero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Identificacion</valueSetName>
    </valueSet>
</CustomField>