unpackaged/main/default/objects/Perfil_Tercero_Moral__c/recordTypes/Perfil_Tercero_1_Persona_Moral.recordType-meta.xml
<RecordType>
    <fullName>Perfil_Tercero_1_Persona_Moral</fullName>
    <active>true</active>
    <label>Perfil Tercero 1 Persona Moral</label>
</RecordType>