unpackaged/main/default/objects/Perfil_Tercero_Moral__c/validationRules/Campos_Alfanumericos.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Alfanumericos</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( RFC_Tercero_Moral__c ,&quot;^[a-z A-Z 0-9]*$&quot;))</errorConditionFormula>
    <errorMessage>Por Favor Ingresar Unicamente Numeros y Letras</errorMessage>
</ValidationRule>