unpackaged/main/default/objects/Perfil_Tercero_Moral__c/validationRules/Monto_total_aportar.validationRule-meta.xml
<ValidationRule>
    <fullName>Monto_total_aportar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED(Monto_Total_a_Aportar__c),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

)</errorConditionFormula>
    <errorDisplayField>Monto_Total_a_Aportar__c</errorDisplayField>
    <errorMessage>Editable, únicamente en los estatus Validado, Reserva, Formalización.</errorMessage>
</ValidationRule>