unpackaged/main/default/objects/Perfil_Tercero_Moral__c/validationRules/Solo_Aceptar_Letras.validationRule-meta.xml
<ValidationRule>
    <fullName>Solo_Aceptar_Letras</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Nombre__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorMessage>Porfavor Solo Ingresar Letras</errorMessage>
</ValidationRule>